# arcprizesessions

./: .buildinfo  README.rst  index.html  objects.inv  pyproject.toml  searchindex.js
.archive/reports/: index.rst
.github/workflows/: action.yml
_sources/: index.rst.txt
about/: index.html
changelog/: index.html
connect/: index.html
demos/: index.html
demos/demo/: index.html
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_sources/: index.rst.txt
docs/about/: index.html
docs/changelog/: index.html
docs/connect/: index.html
docs/demos/: index.html
docs/genindex/: index.html
docs/glossary/: index.html
docs/intro/: index.html
docs/log/: atom.xml
docs/logs/: index.html
docs/mission/: index.html
docs/modules/: index.html
docs/py-modindex/: index.html
docs/refs/: index.html
docs/search/: index.html
docs/sessions/: index.html
docs/todos/: index.html
docs/usage/: index.html
docsrc/: conf.py  index.rst  intro.rst
docsrc/sessions/: get_scores.py  index.rst
first-six/: run.py
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
log/24.326-194542/: index.html
log/archive/: index.html
log/drafts/: index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: index.html
search/: index.html
sessions/: index.html
sessions/24.307.221454/: index.html
sessions/24.322.203643/: index.html
sessions/24.328.184327/: index.html
sessions/24.328.192548/: index.html
todos/: index.html
usage/: index.html
(+9191 files in other folders)
