[project]
name = "geometor-arcprizesessions"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "sessions reports for ARC test runs"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
arcprizesessions = "geometor.arcprizesessions.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.arcprizesessions.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/arcprizesessions"
"Repository" = "https://github.com/geometor/arcprizesessions"
"Issues" = "https://github.com/geometor/arcprizesessions/issues"